--- a/requirements.txt
+++ b/requirements.txt
@@ -1,135 +1,46 @@
-affine==2.2.1
 anytree==2.4.3
-appdirs==1.4.3
-asn1crypto==0.24.0
-attrs==18.1.0
-Automat==0.0.0
-backcall==0.1.0
-basemap==1.1.0
-bleach==2.1.3
-boto3==1.7.48
-botocore==1.10.48
-certifi==2018.4.16
-cffi==1.11.5
-cftime==1.0.0
-chardet==3.0.4
-click==6.7
-click-plugins==1.0.3
-cligj==0.4.0
-colorama==0.3.9
-constantly==15.1.0
-cryptography==2.2.1
+basemap==1.2.0
+certifi==2018.10.15
+cftime==1.0.1
+Click==7.0
+click-plugins==1.0.4
+cligj==0.5.0
 cycler==0.10.0
-Cython==0.28.4
-decorator==4.3.0
+Cython==0.29
 descartes==1.1.0
-docutils==0.14
 entrypoints==0.2.3
-et-xmlfile==1.0.1
-fastcache==1.0.2
-Fiona==1.7.12
-Flask==1.0.2
-future==0.16.0
+Fiona==1.7.13
+future==0.17.0
 GDAL==2.2.4
-geopandas==0.3.0
-html5lib==1.0.1
-hyperlink==17.3.1
-idna==2.7
-incremental==17.5.0
-ipykernel==4.8.2
-ipython==6.4.0
-ipython-genutils==0.2.0
-ipywidgets==7.3.0
-itsdangerous==0.24
-jdcal==1.4
-jedi==0.12.1
-Jinja2==2.10
-jmespath==0.9.3
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.2.3
-jupyter-console==5.2.0
-jupyter-core==4.4.0
+geopandas==0.4.0
+hazelbean==0.8.0
 keyring==13.2.1
 kiwisolver==1.0.1
 Markdown==2.6.11
-MarkupSafe==1.0
 matplotlib==2.2.2
-mistune==0.8.3
-mkl-fft==1.0.2
+mkl-fft==1.0.6
 mkl-random==1.0.1
-mock==2.0.0
 munch==2.3.2
-nbconvert==5.3.1
-nbformat==4.4.0
 netCDF4==1.4.0
-nose==1.3.7
-notebook==5.6.0
-numpy==1.14.2
-openpyxl==2.5.4
-pandas==0.23.1
-pandocfilters==1.4.2
-parso==0.3.0
-patsy==0.5.0
-pbr==5.1.0
-pickleshare==0.7.4
-pkginfo==1.4.2
-prometheus-client==0.2.0
-prompt-toolkit==1.0.15
+numpy==1.15.3
+pandas==0.23.4
 psycopg2==2.7.5
-pyasn1==0.4.3
-pyasn1-modules==0.2.1
-pycparser==2.18
-pygeoprocessing==1.2.3
-Pygments==2.2.0
-PyHamcrest==1.9.0
-pyOpenSSL==18.0.0
-pyparsing==2.2.0
+pygeoprocessing==1.3.1
+pyparsing==2.2.2
 pyproj==1.9.5.1
-PySAL==1.14.3
+PySAL==1.14.4.post2
 pyshp==1.2.12
-python-dateutil==2.7.3
-pytz==2018.4
-pywin32==221
+python-dateutil==2.7.4
+pytz==2018.6
 pywin32-ctypes==0.1.2
-pywinpty==0.5.4
-PyYAML==3.12
-pyzmq==17.1.0
-QtAwesome==0.4.4
-qtconsole==4.3.1
-QtPy==1.4.2
-rasterio==0.36.0
-requests==2.19.1
-requests-toolbelt==0.8.0
+QtAwesome==0.5.1
+QtPy==1.5.2
 Rtree==0.8.3
-s3transfer==0.1.13
-scikit-learn==0.19.1
 scipy==1.1.0
-seaborn==0.9.0
-Send2Trash==1.5.0
-service-identity==17.0.0
 Shapely==1.6.4.post2
-simplegeneric==0.8.1
-simplejson==3.16.0
 six==1.11.0
-snuggs==1.4.1
-SQLAlchemy==1.2.8
-statsmodels==0.9.0
-sympy==1.2
+SQLAlchemy==1.2.12
 taskgraph==0.7.0
-terminado==0.8.1
-testpath==0.3.1
-tornado==5.0.2
-tqdm==4.23.4
-traitlets==4.3.2
-twine==1.11.0
-Twisted==17.5.0
-urllib3==1.23
-wcwidth==0.1.7
-webencodings==0.5.1
-Werkzeug==0.14.1
-widgetsnbextension==3.3.0
+tornado==5.1.1
 wincertstore==0.2
-xgboost==0.80
 xlrd==1.1.0
-zope.interface==4.5.0
